<resources>

    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="possword">Possword</string>
    <string name="sing_up_btn">SING UP</string>
    <string name="log_out_btn">LOG OUT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_in_registration">Login</string>
    <string name="contect_for_support">Contect for Support</string>
    <string name="login_btn">Login</string>
    <string name="dont_t_have_an_account">Dont\'t have an account?</string>
    <string name="sing_up_now">Sing Up Now</string>
    <string name="forget_password">Forget Password?</string>
    <string name="fill_all_fields">Fill All Fields</string>
    <string name="please_enter_valid_email_id">please enter valid email id</string>
    <string name="please_enter_valid_password">please enter valid password</string>
    <string name="please_enter_valid_user_name">please enter valid user name</string>
    <string name="select_a_gender">Select a gender</string>
</resources>