<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shashank.splitterexpensemanager.authentication.registration.RegistrationActivity"
    android:background="@drawable/main_gradient">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/splitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_User"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="34dp"
        android:background="@color/primary"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_User"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_mid">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_User_logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/user" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/et_User"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/your_name"
                android:inputType="text"
                android:lines="1"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_User_logo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="34dp"
        android:background="@color/primary"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_User">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_Email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_mid">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_Email_logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/email" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/et_Email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_Email_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="34dp"
        android:background="@color/primary"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_Email">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_mid">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_Password_logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="120sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/password" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/possword"
                android:inputType="textPassword"
                android:lines="1"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_Password_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_male"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/primary"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cv_female"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_male"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_mid">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_male_logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/ll_male_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_male"
                        android:layout_width="24sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:tint="@color/primary_mid"
                        android:src="@drawable/male" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/male"
                android:lines="1"
                android:textSize="14sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_male_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_female"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/primary"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_male"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_female"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_mid">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_female_logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/ll_female_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_female"
                        android:layout_width="24sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:tint="@color/primary_mid"
                        android:src="@drawable/female" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/female"
                android:lines="1"
                android:textSize="14sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_female_logo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="34dp"
        android:background="@color/primary"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_male">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_Registration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sing_up_btn"
                android:textColor="@color/primary_dark"
                android:textSize="20dp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_login">

        <TextView
            android:id="@+id/tv_DHAA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_login" />

        <TextView
            android:id="@+id/tv_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_in_registration"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/cv_login" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_Contact_for_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/contect_for_support"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <include
        android:id="@+id/loader_Registration"
        layout="@layout/loader"
        />
</androidx.constraintlayout.widget.ConstraintLayout>